--- a/trades/templates/trades/home.html
+++ b/trades/templates/trades/home.html
@@ -7,9 +7,32 @@
 <body>
     <h1>Booked trades</h1>
 
-    <h2>Last trades:</h2>
-    {% for trade in trades_list %}
-    <li>{{ trade.ID }}</li>
-    {% endfor %}
+    {% if trades_list|length > 0 %}
+        <h2>Last trades:</h2>
+        <table class="table table-striped">
+            <tr>
+                <td>Sell CCY</td>
+                <td>Sell Amount</td>
+                <td>Buy CCY</td>
+                <td>Buy Amount</td>
+                <td>Rate</td>
+                <td>Date Booked</td>
+                <td>Actions</td>
+            </tr>
+            {% for trade in trades_list %}
+                <tr>
+                    <td>{{ trade.sell_currency }}</td>
+                    <td>{{ trade.sell_amount }}</td>
+                    <td>{{ trade.buy_currency }}</td>
+                    <td>{{ trade.buy_amount }}</td>
+                    <td>{{ trade.rate }}</td>
+                    <td>{{ trade.date_booked|date:"d/m/Y" }} {{ trade.date_booked|time:"H:i" }}</td>
+                    <td>Edit - Delete</td>  <!-- Not implemented yet -->
+                </tr>
+            {% endfor %}
+        </table>
+    {% else %}
+        There's no trades.
+    {% endif %}
 </body>
 </html>
