Creating 'details view' for trades

--- a/trades/templates/trades/home.html
+++ b/trades/templates/trades/home.html
@@ -27,7 +27,7 @@
                     <td>{{ trade.buy_amount }}</td>
                     <td>{{ trade.rate }}</td>
                     <td>{{ trade.date_booked|date:"d/m/Y" }} {{ trade.date_booked|time:"H:i" }}</td>
-                    <td>Edit - Delete</td>  <!-- Not implemented yet -->
+                    <td><a href="trades/{{ trade.pk }}">Edit</a> - Delete</td>
                 </tr>
             {% endfor %}
         </table>
