--- a/ebury/templates/base.html
+++ b/ebury/templates/base.html
@@ -1,8 +1,11 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %} Ebury test - Ignacio Lasaosa Sáez {% endblock %}</title>
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap-theme.min.css' %}" rel="stylesheet">
 </head>
 <body>
     <nav>
