--- a/trades/templates/trades/home.html
+++ b/trades/templates/trades/home.html
@@ -29,7 +29,7 @@
                     <td>
                         <a href="{% url 'trade_detail' trade.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
                         -
-                        <a href=""><span class="glyphicon glyphicon-remove"></span></a>
+                        <a href="{% url 'delete_trade' trade.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
                     </td>
                 </tr>
             {% endfor %}
